# reinforcement-learning

./: README.md  claude-dev.md  requirements.txt
1-foundational/Temporal-Difference/: CLAUDE.md  LEARNING.md  demo.py  demo_control.py  pyproject.toml
1-foundational/Temporal-Difference/agents/: __init__.py  base.py  monte_carlo.py  q_learning.py  sarsa.py  td_zero.py  utils.py
1-foundational/Temporal-Difference/app/: app.py
1-foundational/Temporal-Difference/envs/: __init__.py  gridworld.py  random_walk.py
1-foundational/Temporal-Difference/experiments/: __init__.py  control_comparison.py  plotting.py  policy_evaluation.py
1-foundational/Temporal-Difference/mdp/: __init__.py  core.py  policy.py
1-foundational/Temporal-Difference/td_math/: __init__.py  bellman.py  returns.py
1-foundational/Temporal-Difference/tests/: __init__.py  test_agents_td.py  test_agents_utils.py  test_control_agents.py  test_envs.py  test_experiments.py  test_gridworld.py  test_math_returns.py  test_mdp_core.py
6-hybrid-rl/MAML/app/: pyproject.toml
8-multi-agent-rl/QMIX/: CLAUDE.md  pytest.ini
excersises/monte-carlo/: Monte_Carlo_RL.ipynb
exercises/monte-carlo/: Monte_Carlo_RL_Solution.ipynb  TD.ipynb
exercises/temporal-difference/: TD.ipynb  TD_pl.ipynb
learning/mastering_rl/contextual_bandits/: contextual_bandits.ipynb
learning/mastering_rl/dynamic_programming/: dp.ipynb  dp_ex.ipynb
learning/mastering_rl/exploration-exploitation/: upper_confidence_bounds.ipynb
learning/mastering_rl/mdp/: markov_chain_examples.ipynb  (+5 more)
trading/moving_average/: agent.py  env.py
(+7 files in other folders)
