# poetry install

[tool.poetry]
name = "training-app"
version = "0.1.0"
description = "Training apps"
authors = ["Your Name <you@example.com>"]

packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
gymnasium = "^0.29.0" 
scipy = "^1.11.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
elevator = "app.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
